# stocks-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Polygon  README.md  clippy.toml  maskfile.md  scrape.sh  signal_generator.rs  transform.rs
.cargo/: config.toml
backtester/: Cargo.toml  README.md
backtester/assets/: trade-snapshots.json
backtester/scripts/: backtest.sh  compute.sh  scrape-historical.sh  scrape-today.sh
backtester/src/: computing.rs  database.rs  dates.rs  http_client.rs  main.rs  market_session.rs  math.rs  scraping.rs  signals.rs  structs.rs
backtester/src/backtesting/: combinations.rs  mod.rs  signal_snapshots.rs  statistics.rs  trade_performance.rs
backtester/src/providers/: finnhub.rs  polygon.rs  yahoo_finance.rs
backtester/src/strategies/: mod.rs  supertrend.rs  vwap_mvwap_ema_crossover.rs
candle_scraper/: Cargo.toml  README.md
candle_scraper/schema/: 000-candles.sql
candle_scraper/src/: main.rs  structs.rs
candle_scraper/src/providers/: finnhub.rs  mod.rs  polygon.rs  yahoo_finance.rs
charts/: main.py
combination_backtester/: Cargo.toml
combination_backtester/src/: main.rs
common/: Cargo.toml  README.md
common/src/: backtesting.rs  cache.rs  candles.rs  database.rs  dates.rs  file.rs  greeks.rs  http_client.rs  json_time.rs  lib.rs  market_session.rs  math.rs  retry.rs  strategy.rs  structs.rs  trading.rs  utilities.rs
historical_candle_scraper/: Cargo.toml
historical_candle_scraper/src/: main.rs
options_scraper/: Cargo.toml  README.md
options_scraper/src/: main.rs
providers/: Cargo.toml
providers/src/: lib.rs
providers/src/alpha_vantage/: mod.rs
providers/src/finnhub/: mod.rs  structs.rs
providers/src/polygon/: mod.rs  structs.rs
providers/src/robinhood/: formatter.rs  helpers.rs  mod.rs  robinhood.rs
providers/src/thinkorswim/: formatter.rs  helpers.rs  mod.rs  thinkorswim.rs
providers/src/tradingview/: formatter.rs  helpers.rs  mod.rs  structs.rs  tradingview.rs
providers/src/yahoo_finance/: mod.rs
quote_scraper/: Cargo.toml  README.md
quote_scraper/src/: main.rs
robinhood/: Cargo.toml  README.md
robinhood/src/: formatter.rs  helpers.rs  lib.rs  robinhood.rs  structs.rs
schema/: 001-quote_snapshots.sql
scraper/: Cargo.toml
scraper/src/: main.rs
scripts/: aggregate.mjs  backtest.sh  package-lock.json  package.json  scrape.sh
signal_backtester/: Cargo.toml
signal_backtester/src/: combinations.rs  main.rs
signal_scraper/: Cargo.toml
signal_scraper/src/: main.rs
src/: date_generator.rs  main.rs  trade_backtester.rs  trade_generator.rs
strategies/: Cargo.toml
strategies/src/: lib.rs  supertrend.rs  vwap_mvwap_ema_crossover.rs
thinkorswim/: Cargo.toml  README.md
thinkorswim/src/: formatter.rs  greeks.rs  helpers.rs  json_time.rs  lib.rs  structs.rs  thinkorswim.rs
trade_backtester/: Cargo.toml
trade_backtester/src/: main.rs
trade_generator/: Cargo.toml
trade_generator/src/: main.rs
tradingview/: Cargo.toml  README.md
tradingview/src/: formatter.rs  helpers.rs  lib.rs  structs.rs  tradingview.rs
