[workspace]
members = [
  # libraries
  "common",
  "providers",
  "strategies",
  # binaries
  "backtester", # TODO: combine into just backtester?
  "signal_backtester", # TODO: combine into just backtester?
  "candle_scraper",
  #"options_scraper", # TODO: implement
  "quote_scraper",
  "signal_scraper",
  "historical_candle_scraper"
]
