[workspace]
members = [
  # libraries
  "common",
  "providers",
  # binaries
  "backtester",
  "scraper"
]

[workspace.dependencies]
# logging
simple_logger = "4.0"
log = "0.4"
# runtime
tokio = { version = "1", features = ["time", "sync", "net", "rt", "fs", "macros"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
json_dotpath = { version = "1" }
# http requests/urls/cookies
reqwest = "0.11"
url = "2.3"
cookie = "0.16"
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# yahoo finance
yahoo_finance_api = "1.3.0"
# providers
providers = { path = "../providers" }
# technical analysis
ta = { git = "https://github.com/brandonros/ta-rs", rev = "366c310b3a518fd990f1972dc1ebed606b9b57a6" }
yata = "0.6.1"
# decimal
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
ordered-float = "3.4.0"
# paralell iteration
rayon = "1.6.1"
# env
dotenv = "0.15.0"
# iter heleprs
itertools = "0.10.5"
# shutdown
async-shutdown = "0.1"
# async
futures = { version = "0.3" }
async-recursion = "1.0.0"
# uuid
uuid = { version = "1", features = ["v4"] }
# websocket client
websocket-lite = { version = "0.5" }
# regex
regex = { version = "1.7" }
# error handling
anyhow = "1.0.68"
# options greeks
black_scholes = "0.10.0"
# csv
csv = "1.2.1"