[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
csv = "1.2.1"
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta = "0.5.0"
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
memoize = "0.4.0"
