[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

[dependencies]
# http request
reqwest = "0.11.13"
url = "2.3.1"
# async
tokio = { version = "1", features = ["rt", "fs"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# logging
log = "0.4.17"
simple_logger = "4.0.0"
# technical analysis
ta = { git = "https://github.com/brandonros/ta-rs", rev = "fd5a4e876e6f8da485895a5dac29f9e093fbc259" }
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# env configuration
dotenv = "0.15.0"
# sqlite
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled", "serde_json"] }
# paralell iteration
rayon = "1.6.1"
# yahoo finance
yahoo_finance_api = "1.0"
# algebra
linregress = "0.5.0"
# decimal
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
# cache
cached = "0.42.0"
# common
common = { path = "../common" }
# providers
providers = { path = "../providers" }
# strategies
strategies = { path = "../strategies" }