[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = { workspace = true }
simple_logger = { workspace = true }
# runtime
tokio = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# database
rusqlite = { workspace = true }
# technical analysis
ta = { workspace = true }
# common
common = { path = "../common" }
# decimal
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ordered-float = { workspace = true }
# paralell iteration
rayon = { workspace = true }