[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = "0.4"
# http requests
reqwest = "0.11"
# json
serde = "1"
serde_json = "1"
# runtime
tokio = { version = "1", features = ["time"] }
# database
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled", "serde_json"] }
# time
chrono = "0.4"
chrono-tz = "0.8"
# options greeks
black_scholes = "0.10.0"
