[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = "0.4"
# http requests
reqwest = "0.11"
# json
serde = "1"
serde_json = "1"
# runtime
tokio = { version = "1", features = ["time", "fs"] }
# database
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled", "serde_json"] }
# time
chrono = "0.4"
chrono-tz = "0.8"
# options greeks
black_scholes = "0.10.0"
# decimal
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
# error handling
anyhow = "1.0.68"
# technical analysis
ta = { git = "https://github.com/brandonros/ta-rs", rev = "fd5a4e876e6f8da485895a5dac29f9e093fbc259" }
rayon = "1.6.1"
