[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = { workspace = true }
# http requests
reqwest = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# runtime
tokio = { workspace = true }
# database
rusqlite = { workspace = true }
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# options greeks
black_scholes = { workspace = true }
# decimal
rust_decimal = { workspace = true }
ordered-float = { workspace = true }
# error handling
anyhow = { workspace = true }
# technical analysis
ta = { workspace = true }
