[package]
name = "historical_candle_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
simple_logger = { workspace = true }
log = { workspace = true }
# runtime
tokio = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# http request
reqwest = { workspace = true }
url = { workspace = true }
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# yahoo finance
yahoo_finance_api = { workspace = true }
# common
common = { path = "../common" }
# providers
providers = { path = "../providers" }
# database
rusqlite = { workspace = true }
# env vars
dotenv = { workspace = true }
