[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# common
common = { path = "../common" }
itertools = "0.10.5"
# yahoo finance
yahoo_finance_api = "1.3.0"
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
json_dotpath = { version = "1" }
# logging
log = "0.4.17"
# shutdown
async-shutdown = "0.1"
# async
futures = { version = "0.3" }
async-recursion = "1.0.0"
tokio = { version = "1", features = ["time", "sync", "net", "rt"] }
# uuid
uuid = { version = "1", features = ["v4"] }
# websocket client
websocket-lite = { version = "0.5" }
# http + urls + cookies
reqwest = "0.11"
url = "2.3.1"
cookie = "0.16"
# regex
regex = { version = "1.7" }
