[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# common
common = { path = "../common" }
# iterator tools
itertools ={ workspace = true }
# yahoo finance
yahoo_finance_api = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
json_dotpath = { workspace = true }
# logging
log = { workspace = true }
# shutdown
async-shutdown = { workspace = true }
# async
futures = { workspace = true }
async-recursion = { workspace = true }
tokio = { workspace = true }
# uuid
uuid = { workspace = true }
# websocket client
websocket-lite = { workspace = true }
# http + urls + cookies
reqwest = { workspace = true }
url = { workspace = true }
cookie = { workspace = true }
# regex
regex = { workspace = true }
# error handling
anyhow = { workspace = true }
