[package]
name = "robinhood"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures = { version = "0.3" }
async-recursion = "1.0.0"
# logging
log = { version = "0.4" }
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# http client / url / cookies
reqwest = { version = "0.11", features = ["json"] }
url = "2.3.1"
cookie = "0.16"
# common
common = { path = "../common" }
# iterator
itertools = "0.10.5"
# options greeks
black_scholes = "0.10.0"
