[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
simple_logger = { workspace = true }
log = { workspace = true }
# runtime
tokio = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# yahoo finance
yahoo_finance_api = { workspace = true }
# common
common = { path = "../common" }
# providers
providers = { path = "../providers" }
# env vars
dotenv = { workspace = true }
