[package]
name = "signal_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = { workspace = true }
simple_logger = { workspace = true }
# runtime
tokio = { workspace = true }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# http requests/urls/cookies
reqwest = { workspace = true }
url = { workspace = true }
cookie = { workspace = true }
# time
chrono = { workspace = true }
chrono-tz = { workspace = true }
# database
rusqlite = { workspace = true }
# technical analysis
ta = { workspace = true }
# common
common = { path = "../common" }
# strategies
strategies = { path = "../strategies" }
# providers
providers = { path = "../providers" }
