[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

[dependencies]
# common
common = { path = "../common" }
# json
serde = { workspace = true }
serde_json = { workspace = true }
# technical analysis
ta = { git = "https://github.com/brandonros/ta-rs", rev = "fd5a4e876e6f8da485895a5dac29f9e093fbc259" }
