[package]
name = "trade_backtester"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = "0.4"
simple_logger = "4.0"
# runtime
tokio = { version = "1.24", features = ["rt", "macros"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# http requests/urls/cookies
reqwest = "0.11"
url = "2.3"
cookie = "0.16"
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# database
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled", "serde_json"] }
# technical analysis
ta = { git = "https://github.com/brandonros/ta-rs", rev = "fd5a4e876e6f8da485895a5dac29f9e093fbc259" }
# common
common = { path = "../common" }
# providers
providers = { path = "../providers" }
# strategies
strategies = { path = "../strategies" }
# decimal
rust_decimal = "1.28.0"
rust_decimal_macros = "1.28.0"
# paralell iteration
rayon = "1.6.1"
