[package]
name = "tradingview"
version = "0.1.0"
edition = "2021"

[dependencies]
# shutdown
async-shutdown = "0.1.2"
# async
futures = { version = "0.3" }
tokio = { version = "1", features = ["time", "fs", "sync", "net", "macros", "rt"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
json_dotpath = { version = "1" }
# logging
log = { version = "0.4" }
# lazy_static
lazy_static = "1.4.0"
# time
chrono = "0.4.0"
chrono-tz = "0.8.0"
# iterator
itertools = "0.10.5"
# websocket client
websocket-lite = { version = "0.5" }
# regex
regex = { version = "1.7" }
